--- a/mall-pojo/pom.xml
+++ b/mall-pojo/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>mall-mgt</artifactId>
+    <artifactId>mall-pojo</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -17,17 +17,4 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.demo</groupId>
-            <artifactId>mall-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.demo</groupId>
-            <artifactId>mall-business</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 </project>
