--- a/mall-business/pom.xml
+++ b/mall-business/pom.xml
@@ -24,9 +24,10 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+        <!-- 该依赖存在一个问题: 根据class对象获取RequestMappingHandlerMapping的Bean对象不唯一, 暂时先注释这个依赖 -->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
