chore: 重构JwtFilter过滤链

--- a/mall-mgt/src/main/resources/application.yml
+++ b/mall-mgt/src/main/resources/application.yml
@@ -39,3 +39,5 @@ my_mall:
   jwt:
     secret: "your-very-secure-jwt-secret-key-2024!@#ABCdef1234567890"
     expiration: 86400 # 1天(秒为单位)
+  captcha:
+    expiration: 60
