--- a/mall-business/pom.xml
+++ b/mall-business/pom.xml
@@ -48,6 +48,13 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!-- 处理excel导出 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>4.0.3</version>
+        </dependency>
+
         <!-- 该依赖存在一个问题: 根据class对象获取RequestMappingHandlerMapping的Bean对象不唯一, 暂时先注释这个依赖 -->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
