--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
             <artifactId>guava</artifactId>
             <version>33.4.8-jre</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.demo</groupId>
+            <artifactId>mall-pojo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 <!--    <build>-->
