feat: 完善部门管理
- 完善添加部门
- 删除,批量删除部门
- 条件查询部门

--- a/mall-mgt/src/main/resources/application.yml
+++ b/mall-mgt/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
       &characterEncoding=utf8
       &useSSL=false&zeroDateTimeBehavior=convertToNull
       &allowMultiQueries=true&autoReconnect=true
+    driver-class-name: org.mariadb.jdbc.Driver
   data:
     redis:
       port: 6379
