--- a/mall-mgt/pom.xml
+++ b/mall-mgt/pom.xml
@@ -29,5 +29,11 @@
             <artifactId>mall-business</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.demo</groupId>
+            <artifactId>mall-pojo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
