--- a/mall-pojo/pom.xml
+++ b/mall-pojo/pom.xml
@@ -17,4 +17,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>4.0.3</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
