chore: 添加新的忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+test/
 
 ### STS ###
 .apt_generated
@@ -31,3 +32,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### 测试环境配置文件
+application-dev.yml
