feat: 添加异地登录邮件预警

--- a/mall-job/src/main/resources/application.yml
+++ b/mall-job/src/main/resources/application.yml
@@ -51,3 +51,14 @@ my_mall:
 logging:
   level:
     com.mall.mapper: debug
+
+ip2region:
+  db-path: "classpath:ip2region/ip2region.xdb"
+
+ip-geolocation:
+  api: "http://ip-api.com/json/"
+  city-field-name: "city"
+  country-field-name: "country"
+  province-field-name: "province"
+  params:
+    lang: zh-CN
