feat: MQ异步推送消息

--- a/mall-job/src/main/resources/application.yml
+++ b/mall-job/src/main/resources/application.yml
@@ -51,6 +51,7 @@ my_mall:
 logging:
   level:
     com.mall.mapper: debug
+    org.springframework.amqp.support.converter: DEBUG
 
 ip2region:
   db-path: "classpath:ip2region/ip2region.xdb"
