--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -63,5 +63,11 @@
             <artifactId>ip2region</artifactId>
             <version>2.7.0</version>
         </dependency>
+
+        <!-- RabbitMq -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 </project>
