feat: 数据字典添加二级缓存

--- a/mall-business/pom.xml
+++ b/mall-business/pom.xml
@@ -60,6 +60,17 @@
             <version>${mybatis.version}</version>
         </dependency>
 
+        <!-- spring-cache框架 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <!-- caffeine缓存 -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
         <!-- 该依赖存在一个问题: 根据class对象获取RequestMappingHandlerMapping的Bean对象不唯一, 暂时先注释这个依赖 -->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
