--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -104,5 +104,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+
+        <!-- 七牛云 Java SDK -->
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>7.19.0</version>
+        </dependency>
     </dependencies>
 </project>
