--- a/mall-job/src/main/resources/application.yml
+++ b/mall-job/src/main/resources/application.yml
@@ -46,6 +46,13 @@ my-mall:
     queue-size: 200
     thread-name-prefix: QuartzThread
 
+  elasticsearch:
+    host: ${ES_HOST}
+    port: ${ES_PORT}
+    username: ${ES_USERNAME}
+    password: ${ES_PASSWORD}
+    product-index-name: product-es-index-v1
+
 logging:
   level:
     com.mall.business.mapper: debug
