--- a/mall-web/src/main/resources/application.yml
+++ b/mall-web/src/main/resources/application.yml
@@ -63,8 +63,15 @@ my-mall:
     expiration: ${JWT_EXPIRATION:86400}   # 1 天(秒)
   captcha:
     expiration: ${CAPTCHA_EXPIRATION:120}
+
   password:
     private-key-path: ./pri.key
+
+  elasticsearch:
+    host: ${ES_HOST}
+    port: ${ES_PORT}
+    username: ${ES_USERNAME}
+    password: ${ES_PASSWORD}
 
 ip2region:
   db-path: ${IP2REGION_DB_PATH:classpath:ip2region/ip2region.xdb}
