--- a/mall-web/src/main/resources/application.yml
+++ b/mall-web/src/main/resources/application.yml
@@ -72,6 +72,8 @@ my-mall:
     port: ${ES_PORT}
     username: ${ES_USERNAME}
     password: ${ES_PASSWORD}
+    index:
+      product: 'product-es-index-v1'
 
 ip2region:
   db-path: ${IP2REGION_DB_PATH:classpath:ip2region/ip2region.xdb}
