--- a/mall-web/src/main/resources/application.yml
+++ b/mall-web/src/main/resources/application.yml
@@ -74,8 +74,14 @@ my-mall:
     password: ${ES_PASSWORD}
     index:
       product: 'product-es-index-v1'
+
   sensitive-word-whiteList:
     file-path: 'sensitive/sensitive-word-whitelist.txt'
+
+  id-generator:
+    snowflake:
+      worker-id: 1
+      datacenter-id: 1
 
 ip2region:
   db-path: ${IP2REGION_DB_PATH:classpath:ip2region/ip2region.xdb}
